added categories and wallets