@@ -1,7 +1,7 @@
 
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.0'
+    id 'org.springframework.boot' version '3.2.3'
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
@@ -9,7 +9,7 @@ group = 'prog.academy'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = '21'
 }
 
 configurations {
@@ -22,9 +22,18 @@ repositories {
     mavenCentral()
 }
 
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
+
+test {
+    jvmArgs '--enable-preview'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.hibernate:hibernate-envers:6.4.4.Final'
     implementation 'org.postgresql:postgresql'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -33,8 +42,6 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-def currentJvm = org.gradle.internal.jvm.Jvm.current()
-println currentJvm
 
 tasks.named('test') {
     useJUnitPlatform()
